# pygrammalecte

./: .codeclimate.yml  .python-versions  .travis.yml  LICENSE  README.md  deliver.sh  example.py  pyproject.toml
.github/workflows/: tests.yml
pygrammalecte/: __init__.py  pygrammalecte.py
tests/: test_pygrammalecte.py
