[tool.poetry]
name = "pygrammalecte"
version = "1.1.0"
description = "Grammalecte, le correcteur grammatical en Python"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
    # TODO: Add more
]
authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vpoulailleau/pygrammalecte"
homepage = "https://github.com/vpoulailleau/pygrammalecte"
documentation = "https://github.com/vpoulailleau/pygrammalecte"
keywords = ["grammalecte", "linter", "grammatical", "grammar-checker", "french"]
license = "BSD-3-Clause"
include = ["pygrammalecte/**/*.py"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20.0"

[tool.poetry.dev-dependencies]
python-dev-tools = {version = ">=2020.9.4", python = ">=3.7,<4.0"}

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37, py38

[testenv]
whitelist_externals =
    poetry
    echo
    sed
    cat
    cp
changedir = {toxinidir}/tests
commands =
    poetry install -v
    poetry run pytest -s -vv --cov=pygrammalecte
    poetry run coverage xml
    echo 'fix travis bug'
    sed --in-place -e 's#//home#/home#g' coverage.xml
    echo 'fix codeclimate bug, use relative path'
    sed --in-place -e 's#/home.*vpoulailleau/pygrammalecte/##g' coverage.xml
    cp coverage.xml ../coverage.xml
    cat ../coverage.xml
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

