[project]
name = "pygrammalecte"
version = "1.4.0"
description = "Grammalecte, le correcteur grammatical en Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    # TODO: Add more
]
requires-python = ">=3.9"
authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
keywords = ["grammalecte", "linter", "grammatical", "grammar-checker", "french"]
license = "BSD-3-Clause"
dependencies = ["requests>=2.20.0"]

[project.urls]
"Source code" = "https://github.com/vpoulailleau/pygrammalecte"
Repository = "https://github.com/vpoulailleau/pygrammalecte"
homepage = "https://github.com/vpoulailleau/pygrammalecte"
documentation = "https://github.com/vpoulailleau/pygrammalecte"

[tool.hatch.build.targets.sdist]
exclude = [".gitignore", "/.github", "/docs", "config.toml"]

[tool.hatch.build.targets.wheel]
packages = ["pygrammalecte"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311, py312, py313

[testenv]
whitelist_externals =
    poetry
    echo
    sed
    cat
    cp
changedir = {toxinidir}/tests
commands =
    poetry install -v
    poetry run pytest -s -vv --cov=pygrammalecte
    poetry run coverage xml
    echo 'fix travis bug'
    sed --in-place -e 's#//home#/home#g' coverage.xml
    echo 'fix codeclimate bug, use relative path'
    sed --in-place -e 's#/home.*vpoulailleau/pygrammalecte/##g' coverage.xml
    cp coverage.xml ../coverage.xml
    cat ../coverage.xml
"""

[tool.uv]
dev-dependencies = ["ruff>=0.7.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
