[project]
name = "pygrammalecte"
version = "1.4.0"
description = "Grammalecte, le correcteur grammatical en Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    # TODO: Add more
]
requires-python = ">=3.9"
authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
keywords = ["grammalecte", "linter", "grammatical", "grammar-checker", "french"]
license = "BSD-3-Clause"
dependencies = ["requests>=2.20.0", "pip>=23"]

[project.urls]
"Source code" = "https://github.com/vpoulailleau/pygrammalecte"
Repository = "https://github.com/vpoulailleau/pygrammalecte"
homepage = "https://github.com/vpoulailleau/pygrammalecte"
documentation = "https://github.com/vpoulailleau/pygrammalecte"

[tool.hatch.build.targets.sdist]
exclude = [".gitignore", "/.github", "/docs", "config.toml"]

[tool.hatch.build.targets.wheel]
packages = ["pygrammalecte"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311, py312, py313

[testenv]
allowlist_externals =
    uv
    echo
    sed
    cat
    cp
changedir = {toxinidir}/tests
commands =
    uv run python -m pytest -s -vv --cov=pygrammalecte
"""

[tool.uv]
dev-dependencies = ["ruff>=0.7.2", "pytest>=8", "pytest-cov >= 6", "tox >= 4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
